１）韓国語の曲名と作詞を入れた。 ２）ひらがなとカタカナのチャートを分けた。 ３）中国語の曲を選んだら、SimplifiedかTraditionalを選べる ３）メニューボタンを押すと、About SingkamasとFeedbackを選択できる。 ４）結果ページではFeedbackもできる（Eメール）--> Buggy

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     
     <string-array name="language_array">
         <item>Japanese</item>
-        <item>Chinese</item>
+        <item>Mandarin</item>
         <item>Korean</item>
     </string-array>
 
