Add loadingscreen class.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,11 +4,14 @@
     <string name="app_name">Singkamas</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    
+
     <string-array name="language_array">
         <item>Japanese</item>
         <item>Mandarin</item>
         <item>Korean</item>
     </string-array>
+
+    <string name="title_activity_loading_screen">LoadingScreen</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
